<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".scanconfirm.ConfirmViewFragment"
            android:layout_margin="16dp">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/label_tag_id"
				android:id="@+id/label_tag_id"/>
		<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:ems="10"
				android:id="@+id/text_tag_id"
				android:hint="@string/label_tag_id"
				android:autofillHints=""
				android:enabled="false"/>
		<TextView
				android:text="@string/label_card_id"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/label_card_id"
				android:layout_marginTop="8dp"/>
		<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:id="@+id/text_card_id"
				android:hint="@string/label_card_id"
				android:autofillHints=""
				android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
				android:inputType="textEmailAddress"/>
		<TextView
				android:text="@string/message_card_id"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/card_id_info"
				android:padding="8dp"/>
		<View
				android:id="@+id/divider2"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="?android:attr/listDivider"
		/>
		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/label_employee_id"
				android:id="@+id/label_employee_id"
				android:layout_marginTop="8dp"/>
		<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
				android:ems="10"
				android:id="@+id/text_employee_id"
				android:hint="@string/hint_employee_id"
				android:autofillHints="@string/hint_employee_id"/>
		<TextView
				android:text="@string/label_employee_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/label_employee_name"
				android:layout_marginTop="8dp"/>
		<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:id="@+id/text_employee_name"
				android:inputType="textPersonName"
				android:hint="@string/hint_employee_name"
				android:autofillHints="@string/hint_employee_name"/>
		<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/button_confirm_ok"
				android:text="@android:string/ok"
				android:layout_marginTop="8dp"/>
	</LinearLayout>

</ScrollView>